Qt Plugin for the ExPlotWidget
1: QT Plugin for ExPlotWidget
2: Fix default param related bug for shared ExPlotWidgetConfigs over multiple plotitems / plotwisgets
3: Change things mypy complained about
TODO: Check Segmentation Fault Bug when setting plotting style to static in designer when adding plot to window without layout

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
-mypy_path=.venv/lib/python3.6/site-packages
-follow_imports=skip
+follow_imports = skip
+ignore_missing_imports = True
 warn_unused_configs = True
