Fixed flake8 and mypy warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,30 @@ versionfile_source = accwidgets/_version.py
 versionfile_build = accwidgets/_version.py
 tag_prefix = v
 
+[mypy]
+follow_imports = skip
+ignore_missing_imports = True
+warn_unused_configs = True
+
+[mypy-versioneer]
+ignore_errors = True
+
+[mypy-accwidgets._version]
+ignore_errors = True
+
+[flake8]
+exclude=versioneer.py,build,.pytest_cache,.mypy_cache,dist,accwidgets/_version.py,.venv,env
+max-line-length=240
+per-file-ignores =
+    # Ignore unused imports and "unable to detect undefined names" with start imports
+    accwidgets/graph/__init__.py:F401,F403
+    # Somehow misinterprets all the type: ignore[...] comments as code and checks them
+    accwidgets/graph/widgets/plotwidget.py: F821
+
+# B009 For flake8-bugbear
+ignore=B009,E731,W503,E402
+
+# For flake8-quotes
+# We also support "double" and "single"
+inline-quotes = double
+docstring-quotes = """
