--- a/dependencies.ini
+++ b/dependencies.ini
@@ -52,8 +52,8 @@ test = pytest~=4.4.0,
        pytest-cov~=2.5.1,
        pytest-random-order~=1.0.4,
        freezegun~=0.3.13
-docs = Sphinx>=2.1.2&&<2.2,
-       recommonmark>=0.6.0&&<0.7,
-       sphinx-rtd-theme>=0.4.3&&<0.5,
-       sphinx-autodoc-typehints>=1.10.3&&<2,
-       sphinxcontrib-napoleon2>=1.0&&<2
+doc = Sphinx>=2.1.2&&<2.2,
+      recommonmark>=0.6.0&&<0.7,
+      sphinx-rtd-theme>=0.4.3&&<0.5,
+      sphinx-autodoc-typehints>=1.10.3&&<2,
+      sphinxcontrib-napoleon2>=1.0&&<2
