--- a/dependencies.ini
+++ b/dependencies.ini
@@ -57,3 +57,14 @@ doc = Sphinx>=2.1.2&&<2.2,
       sphinx-rtd-theme>=0.4.3&&<0.5,
       sphinx-autodoc-typehints>=1.10.3&&<2,
       sphinxcontrib-napoleon2>=1.0&&<2
+
+[property_edit]
+core = dataclasses~=0.7
+test = pytest~=4.4.0,
+       pytest-qt~=3.2.0,
+       pytest-random-order~=1.0.4
+doc = Sphinx>=2.1.2&&<2.2,
+      recommonmark>=0.6.0&&<0.7,
+      sphinx-rtd-theme>=0.4.3&&<0.5,
+      sphinx-autodoc-typehints>=1.10.3&&<2,
+      sphinxcontrib-napoleon2>=1.0&&<2
