Fix for dataclass install on python versions > 3.6

--- a/dependencies.ini
+++ b/dependencies.ini
@@ -59,7 +59,7 @@ doc = Sphinx>=2.1.2&&<2.2,
       sphinxcontrib-napoleon2>=1.0&&<2
 
 [property_edit]
-core = dataclasses~=0.7
+core = dataclasses~=0.7;python_version<'3.7'
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0,
        pytest-random-order~=1.0.4
