Resolve ACCPY-511 "First Simple version of editable charts"

--- a/dependencies.ini
+++ b/dependencies.ini
@@ -46,7 +46,8 @@ release = twine~=1.13.0
 core = numpy~=1.16,
        scipy>=1.1&&<2,
        QtPy>=1.7&&<2,
-       pyqtgraph==0.10.0.post0
+       pyqtgraph==0.10.0.post0,
+       qtawesome~=0.7.0,
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0,
        pytest-cov~=2.5.1,
