Allow styling of the items used to display data using the ExPlotWidget's slots

--- a/dependencies.ini
+++ b/dependencies.ini
@@ -48,6 +48,7 @@ core = numpy~=1.16,
        QtPy>=1.7&&<2,
        pyqtgraph==0.10.0.post0,
        qtawesome~=0.7.0,
+       dataclasses~=0.7;python_version<'3.7'
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0,
        pytest-cov~=2.5.1,
