--- a/dependencies.ini
+++ b/dependencies.ini
@@ -26,26 +26,26 @@
 
 [accwidgets]
 lint = mypy~=0.720,
-       pylint>=2.3.1&&<3,
-       pylint-unittest>=0.1.3&&<2,
-       flake8>=3.7.8&&<4,
-       flake8-quotes>=2.1.0&&<3,
-       flake8-commas>=2&&<3,
-       flake8-colors>=0.1.6&&<2,
-       flake8-rst>=0.7.1&&<2,
-       flake8-breakpoint>=1.1.0&&<2,
-       flake8-pyi>=19.3.0&&<20,
-       flake8-comprehensions>=2.2.0&&<3,
-       flake8-builtins-unleashed>=1.3.1&&<2,
-       flake8-blind-except>=0.1.1&&<2,
-       flake8-bugbear>=19.8.0&&<20
+       pylint>=2.3.1,<3,
+       pylint-unittest>=0.1.3,<2,
+       flake8>=3.7.8,<4,
+       flake8-quotes>=2.1.0,<3,
+       flake8-commas>=2,<3,
+       flake8-colors>=0.1.6,<2,
+       flake8-rst>=0.7.1,<2,
+       flake8-breakpoint>=1.1.0,<2,
+       flake8-pyi>=19.3.0,<20,
+       flake8-comprehensions>=2.2.0,<3,
+       flake8-builtins-unleashed>=1.3.1,<2,
+       flake8-blind-except>=0.1.1,<2,
+       flake8-bugbear>=19.8.0,<20
 release = twine~=1.13.0
 
 
 [graph]
 core = numpy~=1.16,
-       scipy>=1.1&&<2,
-       QtPy>=1.7&&<2,
+       scipy>=1.1,<2,
+       QtPy>=1.7,<2,
        pyqtgraph==0.10.0.post0,
        qtawesome~=0.7.0,
        dataclasses~=0.7;python_version<'3.7'
@@ -54,19 +54,19 @@ test = pytest~=4.4.0,
        pytest-cov~=2.5.1,
        pytest-random-order~=1.0.4,
        freezegun~=0.3.13
-doc = Sphinx>=2.1.2&&<2.2,
-      recommonmark>=0.6.0&&<0.7,
-      sphinx-rtd-theme>=0.4.3&&<0.5,
-      sphinx-autodoc-typehints>=1.10.3&&<2,
-      sphinxcontrib-napoleon2>=1.0&&<2
+doc = Sphinx>=2.1.2,<2.2,
+      recommonmark>=0.6.0,<0.7,
+      sphinx-rtd-theme>=0.4.3,<0.5,
+      sphinx-autodoc-typehints>=1.10.3,<2,
+      sphinxcontrib-napoleon2>=1.0,<2
 
 [property_edit]
 core = dataclasses~=0.7;python_version<'3.7'
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0,
        pytest-random-order~=1.0.4
-doc = Sphinx>=2.1.2&&<2.2,
-      recommonmark>=0.6.0&&<0.7,
-      sphinx-rtd-theme>=0.4.3&&<0.5,
-      sphinx-autodoc-typehints>=1.10.3&&<2,
-      sphinxcontrib-napoleon2>=1.0&&<2
+doc = Sphinx>=2.1.2,<2.2,
+      recommonmark>=0.6.0,<0.7,
+      sphinx-rtd-theme>=0.4.3,<0.5,
+      sphinx-autodoc-typehints>=1.10.3,<2,
+      sphinxcontrib-napoleon2>=1.0,<2
