Speed improvements (2x+ for large data sets), PyQtGraph comparison benchmark (with widgetmark)

--- a/dependencies.ini
+++ b/dependencies.ini
@@ -11,6 +11,7 @@
 # core = productionpackage_one~=0.1.0,
 #        productionpackage_two==0.1.0
 # test = testpackage_one
+# bench = widgetmark==0.1.0
 # docs = docspackage_one==0.1.0
 #
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~ ATTENTION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -53,7 +54,8 @@ test = pytest~=4.4.0,
        pytest-qt~=3.2.0,
        pytest-cov~=2.5.1,
        pytest-random-order~=1.0.4,
-       freezegun~=0.3.13
+       freezegun~=0.3.13,
+bench = widgetmark==0.1
 doc = Sphinx>=2.1.2,<2.2,
       recommonmark>=0.6.0,<0.7,
       sphinx-rtd-theme>=0.4.3,<0.5,
