Normalize subpackage dependencies and improve their resolution

--- a/dependencies.ini
+++ b/dependencies.ini
@@ -27,8 +27,6 @@
 
 [accwidgets]
 lint = mypy~=0.720,
-       pylint>=2.3.1,<3,
-       pylint-unittest>=0.1.3,<2,
        flake8>=3.7.8,<4,
        flake8-quotes>=2.1.0,<3,
        flake8-commas>=2,<3,
@@ -41,6 +39,11 @@ lint = mypy~=0.720,
        flake8-blind-except>=0.1.1,<2,
        flake8-bugbear>=19.8.0,<20
 release = twine~=1.13.0
+test = pytest~=4.4.0,
+       pytest-random-order~=1.0.4,
+       pytest-cov~=2.5.1
+doc = Sphinx>=2.1.2,<2.2,
+      sphinx-rtd-theme>=0.4.3,<0.5,
 
 
 [graph]
@@ -52,23 +55,27 @@ core = numpy~=1.16,
        dataclasses~=0.7;python_version<'3.7'
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0,
-       pytest-cov~=2.5.1,
-       pytest-random-order~=1.0.4,
-       freezegun~=0.3.13,
+       freezegun~=0.3.13
 bench = widgetmark==0.1
 doc = Sphinx>=2.1.2,<2.2,
-      recommonmark>=0.6.0,<0.7,
-      sphinx-rtd-theme>=0.4.3,<0.5,
       sphinx-autodoc-typehints>=1.10.3,<2,
       sphinxcontrib-napoleon2>=1.0,<2
 
+
 [property_edit]
-core = dataclasses~=0.7;python_version<'3.7'
+core = dataclasses~=0.7;python_version<'3.7',
+       QtPy>=1.7,<2
 test = pytest~=4.4.0,
-       pytest-qt~=3.2.0,
-       pytest-random-order~=1.0.4
+       pytest-qt~=3.2.0
 doc = Sphinx>=2.1.2,<2.2,
-      recommonmark>=0.6.0,<0.7,
-      sphinx-rtd-theme>=0.4.3,<0.5,
+      sphinx-autodoc-typehints>=1.10.3,<2,
+      sphinxcontrib-napoleon2>=1.0,<2
+
+
+[led]
+core = QtPy>=1.7,<2
+test = pytest~=4.4.0,
+       pytest-qt~=3.2.0
+doc = Sphinx>=2.1.2,<2.2,
       sphinx-autodoc-typehints>=1.10.3,<2,
       sphinxcontrib-napoleon2>=1.0,<2
