--- a/dependencies.ini
+++ b/dependencies.ini
@@ -26,8 +26,8 @@
 
 
 [accwidgets]
-lint = mypy~=0.720,
-       flake8>=3.7.8,<4,
+lint = mypy==0.761,
+       flake8>=3.7.8,<3.8,
        flake8-quotes>=2.1.0,<3,
        flake8-commas>=2,<3,
        flake8-colors>=0.1.6,<2,
