--- a/dependencies.ini
+++ b/dependencies.ini
@@ -44,6 +44,9 @@ test = pytest~=4.4.0,
        pytest-cov~=2.5.1
 doc = Sphinx>=2.1.2,<2.2,
       sphinx-rtd-theme>=0.4.3,<0.5,
+      sphobjinv>=2.0,<2.1,
+      sphinxcontrib-napoleon2>=1.0,<2,
+      sphinx-autodoc-typehints>=1.10.3,<1.11,
 
 
 [graph]
@@ -58,8 +61,6 @@ test = pytest~=4.4.0,
        freezegun~=0.3.13
 bench = widgetmark==0.1
 doc = Sphinx>=2.1.2,<2.2,
-      sphinx-autodoc-typehints>=1.10.3,<1.11,
-      sphinxcontrib-napoleon2>=1.0,<2
 
 
 [property_edit]
@@ -68,8 +69,6 @@ core = dataclasses~=0.7;python_version<'3.7',
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0
 doc = Sphinx>=2.1.2,<2.2,
-      sphinx-autodoc-typehints>=1.10.3,<1.11,
-      sphinxcontrib-napoleon2>=1.0,<2
 
 
 [led]
@@ -77,5 +76,3 @@ core = QtPy>=1.7,<2
 test = pytest~=4.4.0,
        pytest-qt~=3.2.0
 doc = Sphinx>=2.1.2,<2.2,
-      sphinx-autodoc-typehints>=1.10.3,<1.11,
-      sphinxcontrib-napoleon2>=1.0,<2
