--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,13 +9,15 @@ stages:
   - Release
 
 variables:
-  ACCPY_PYQT_DOCKER_IMAGE: gitlab-registry.cern.ch/acc-co/accsoft/gui/accsoft-gui-pyqt-distro/acc-py-pyqt:ci-v20.03.0
+  ACCPY_PYQT_DOCKER_IMAGE: gitlab-registry.cern.ch/acc-co/accsoft/gui/accsoft-gui-pyqt-distro/acc-py-pyqt:ci-v20.05.0
+  project_name: accwidgets  # Required by acc-py templates
+
+.init_sequence: &init_sequence
+- source /opt/venv/bin/activate
+- git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch".insteadOf ssh://git@gitlab.cern.ch:7999
 
 before_script:
-  - source /opt/venv/bin/activate
-  - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch".insteadOf ssh://git@gitlab.cern.ch:7999
-  - export PIP_INDEX_URL=http://acc-py-repo:8081/repository/vr-py-releases/simple/
-  - export PIP_TRUSTED_HOST=acc-py-repo
+  - *init_sequence
 
 flake8:
   image: $ACCPY_PYQT_DOCKER_IMAGE
@@ -63,9 +65,17 @@ twine:
       - $ACCPY_NEXUS_USER != null
       - $ACCPY_NEXUS_PASSWD != null
 
+.sphinx_custom:
+  before_script:
+      - *init_sequence
+      - yum install -y -q graphviz  # Required to generate inheritance diagrams
+      - pip install .[doc]  # Need to install it here, as sphobjinv should be available
+      - python -c "import sphobjinv as soi; [soi.fileops.writebytes(path=f'docs/{f}.inv', contents=soi.zlib.compress(soi.Inventory(plaintext=soi.fileops.readbytes(f'docs/{f}.txt')).data_file())) for f in ['qt', 'pyqt']]" # Prepare custom intersphinx inventory files
 
 sphinx:
-  extends: .acc_py_build_docs
+  extends:
+    - .acc_py_build_docs
+    - .sphinx_custom
   image: $ACCPY_PYQT_DOCKER_IMAGE
   stage: Release
   only:
@@ -74,6 +84,8 @@ sphinx:
       - develop
 
 sphinx on tag:
-  extends: .acc_py_build_docs_on_tag
+  extends:
+    - .acc_py_build_docs_on_tag
+    - .sphinx_custom
   image: $ACCPY_PYQT_DOCKER_IMAGE
   stage: Release
