--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,10 @@ stages:
   - Release
 
 variables:
-  ACCPY_PYQT_DOCKER_IMAGE: gitlab-registry.cern.ch/acc-co/accsoft/gui/accsoft-gui-pyqt-distro/acc-py-pyqt:ci-v20.05.0
+  ACCPY_PYQT_DOCKER_IMAGE: gitlab-registry.cern.ch/acc-co/devops/python/distribution/ci/pyqt:v2020-11rc2
   project_name: accwidgets  # Required by acc-py templates
 
 .init_sequence: &init_sequence
-- source /opt/venv/bin/activate
 - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch".insteadOf ssh://git@gitlab.cern.ch:7999
 
 before_script:
