--- a/dependencies.ini
+++ b/dependencies.ini
@@ -43,10 +43,10 @@ test = pytest~=4.4.0,
        pytest-random-order~=1.0.4,
        pytest-cov~=2.5.1
 doc = Sphinx>=3.2.1,<3.3,
-      sphinx-rtd-theme>=0.4.3,<0.5,
       sphobjinv>=2.0,<2.1,
       sphinxcontrib-napoleon2>=1.0,<2,
       sphinx-autodoc-typehints>=1.10.3,<1.11,
+      acc-py-sphinx>=0.9,<0.10,
 
 
 [graph]
