Add documentation for LsaSelector

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ build wheel:
       - *init_sequence
       - yum install -y -q graphviz  # Required to generate inheritance diagrams
       - pip install .[doc]  # Need to install it here, as sphobjinv should be available
-      - python -c "import sphobjinv as soi; [soi.fileops.writebytes(path=f'docs/{f}.inv', contents=soi.zlib.compress(soi.Inventory(plaintext=soi.fileops.readbytes(f'docs/{f}.txt')).data_file())) for f in ['qt', 'pyqt']]" # Prepare custom intersphinx inventory files
+      - python -c "import sphobjinv as soi; [soi.fileops.writebytes(path=f'docs/{f}.inv', contents=soi.zlib.compress(soi.Inventory(plaintext=soi.fileops.readbytes(f'docs/{f}.txt')).data_file())) for f in ['qt', 'pyqt', 'pjlsa']]" # Prepare custom intersphinx inventory files
 
 sphinx:
   extends:
