--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ tag_prefix = v
 follow_imports = skip
 ignore_missing_imports = True
 warn_unused_configs = True
+plugins = numpy.typing.mypy_plugin
 
 [mypy-versioneer]
 ignore_errors = True
