--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ pytest:
     - |
       pip install .[test]
       extra_args=
-      [[ "$CURRENT_BASE_IMAGE" == "$ACCPY_IMAGE_CC7_2020_11" ]] && extra_args="--cov-report html:coverage --cov-report term-missing:skip-covered --cov=accwidgets"
+      [[ "$CURRENT_BASE_IMAGE" == "$ACCPY_IMAGE_CC7_2020_11" ]] && extra_args="--cov-report html:coverage --cov-report xml:cobertura.xml --cov-report term-missing:skip-covered --cov=accwidgets"
       OMP_NUM_THREADS=1 run_headless python -m pytest --random-order --junitxml=report.xml $extra_args -vx --color=yes tests/
   coverage: '/^TOTAL.+?(\d+\%)$/'
   artifacts:
@@ -77,6 +77,9 @@ pytest:
     expire_in: 1 month
     reports:
       junit: report.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: cobertura.xml
 
 .aux_install_extras:
   variables:
